Bug 1702394 - Work around small memory leaks in Mesa drivers. r=jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D112194